- Fixed Bug #34590 User defined PDOStatement class can't implement methods